# Index-Ripper

./: .gitignore  POC_MATRIX.md  README.md  README_zh.md  app_utils.py  backend.py  index_ripper.py  index_ripper_ttkb.py  macos.spec  pyproject.toml  pyside_poc.py  requirements.txt  settings_store.py  test_app_utils.py  test_backend.py  test_security_utils.py  test_settings_store.py  test_ui_ctk.py  test_ui_downloads.py  test_ui_theme.py  test_ui_ttkb.py  ui_ctk.py  ui_downloads.py  ui_theme.py  ui_ttkb.py
.github/workflows/: build.yml  ci.yml  python-app.yml
docs/plans/: 2026-03-09-ctk-migration-design.md  2026-03-09-ctk-migration.md  2026-03-10-filetree-redesign-design.md  2026-03-10-filetree-redesign.md  2026-03-10-ui-redesign-design.md  2026-03-10-ui-redesign.md  2026-03-13-code-review-fixes.md
docs/superpowers/plans/: 2026-03-22-electron-rewrite.md  2026-03-22-project-restructure.md
docs/superpowers/specs/: 2026-03-22-electron-rewrite-design.md
electron-app/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
electron-app/src/main/: downloader.ts  index.ts  ipc.ts  scanner.ts  task-queue.ts  utils.ts
electron-app/src/preload/: index.ts
electron-app/src/renderer/: index.html
electron-app/src/shared/: icons.ts  types.ts
src/index_ripper/: __init__.py  __main__.py  app.py  backend.py  self_test.py  utils.py
test/: __init__.py  test_index_ripper.py
tests/: test_app_smoke.py  test_backend.py  test_downloads.py  test_settings.py  test_theme.py  test_utils.py
(+26 files in other folders)
